Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4603

NFS reexport leads to problems of "ls"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.6.0
    • Lustre 2.6.0
    • 3
    • 12590

      When "ls" under a NFS directory, following error message showes up.

      ls: reading directory .: Too many levels of symbolic links

      And what is more, if the dirctory is large, (e.g. has more than 23 files), there will be some files missing when doing "ls".

      [root@vm1 nfs]# ls * | wc -l
      97
      [root@vm1 nfs]# ls -l | wc -l
      ls: reading directory .: Too many levels of symbolic links
      98
      [root@server1 113_nfs]# ls /mnt/lustre/nfs/* | wc -l
      100

      We've confirmed that these problems is introduced by 4e0c8ae(LU-3531 llite: move dir cache to MDC layer). A patch which fixes these problems will be pushed soon.

            di.wang Di Wang (Inactive)
            lixi Li Xi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: