LU-4603 nfs: fix offset problems of readdir

The offset of dir should be set to EOF as soon as
ll_dir_read() has nothing to read. Otherwise, "ls"
on NFS client will return -ELOOP.

And ll_dir_entry_start() should be able to start reading
from the beginning of the offset. Otherwise, some files
might be missing when "ls" on NFS client.

Input dir entry to mdc_read_entry, so it can read next
entry directly and also resolve the hash conflict inside
one page.

Signed-off-by: Li Xi <lixi@ddn.com>
Signed-off-by: Di Wang <di.wang@intel.com>
Change-Id: I93f94836ce59f523794581301f3bc3c491c956a5